<resources>

    <string name="app_name">Wish craft</string>

    <!-- Network errors -->
    <string name="error_unknown_error">Неизвестная ошибка</string>
    <string name="error_timeout">Извините, плохое интернет - соединение!</string>
    <string name="error_network_error">Ошибка при подключении</string>
    <string name="error_gateway_timeout">Время ожидания ответа истекло!</string>


    <string name="welcome_back">Добро пожаловать! Рады снова видеть вас!</string>
    <string name="enter_email">Введите ваш email</string>
    <string name="enter_password">Введите ваш пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login">Войти</string>
    <string name="dont_have_account">Нет аккаунта?</string>
    <string name="register_now">\u0020Зарегистрироваться</string>
    <string name="register_greeting">Здравствуйте! Зарегистрируйтесь, чтобы начать</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="login_now">Войти сейчас</string>

    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="add">Добавить</string>
    <string name="events">События</string>
    <string name="profile">Профиль</string>
    <string name="ok_message">Oк</string>
    <string name="yes_message">Да</string>
    <string name="no_message">Нет</string>
    <string name="warning_log_out">Вы действительно хотите выйти с аккаунта?</string>

    <string name="link_of_product">Ссылка на товар </string>
    <string name="add_button">ДОБАВИТЬ</string>
    <string name="gift_name">Название подарка</string>
    <string name="gift_name_hint">Название желаемого товара</string>
    <string name="price">Цена</string>
    <string name="price_hint">Цена товара</string>
    <string name="desire_rate">Степень желаемости</string>
    <string name="percentage_20">20%</string>
    <string name="describe_it">Опишите это</string>
    <string name="description_hint">Чтобы убедить других купить это для вас, опишите, почему это вам нравится</string>
    <string name="error_message">Сообщение об ошибке</string>
    <string name="save">Сохранить</string>
    <string name="people">Люди</string>
    <string name="wish">Желания</string>
    <string name="message_not_found">Никаких результатов найдено не было</string>
    <string name="adjust_try">Попробуйте настроить свой поиск , чтобы найти то, что вы ищете</string>
    <string name="following">Подписаны</string>
    <string name="follow">Подписаться</string>

</resources>