<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        />
    <item
        android:id="@+id/placeholder"
        app:showAsAction="always"
        android:title=""
        />
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_event"
        android:title="@string/events"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />
</menu>