<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ThemeWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvFragmentTitle"
        android:layout_width="match_parent"
        android:text="@string/welcome_back"
        android:textAppearance="@style/Urbanist25spBold"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_field_background"
        android:layout_marginHorizontal="14dp"
        android:paddingVertical="14dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/enter_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFragmentTitle" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingVertical="14dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/input_field_background"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/Urbanist14spSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />


    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/Urbanist14spRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account" />

        <TextView
            style="@style/Urbanist14spRegular"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>