<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ThemeWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/tvFragmentTitle"
        android:layout_width="match_parent"
        android:text="@string/register_greeting"
        android:textAppearance="@style/Urbanist25spBold"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/input_field_background"
        android:layout_marginHorizontal="14dp"
        android:paddingVertical="14dp"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFragmentTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/input_field_background"
        android:layout_marginHorizontal="14dp"
        android:maxLines="1"
        android:paddingVertical="14dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingVertical="14dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/input_field_background"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingVertical="14dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/input_field_background"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/llLogin"
        android:text="@string/register"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/Urbanist14spRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />

        <TextView
            style="@style/Urbanist14spRegular"
            android:textColor="@color/teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
