<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ThemeWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <FrameLayout
            android:id="@+id/frameImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:background="@drawable/stroke_background"
            android:padding="@dimen/margin_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivWishImage"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:adjustViewBounds="true"
                android:background="@drawable/bottom_view_background"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_empty"
                app:shapeAppearanceOverlay="@style/RoundedSquare" />

            <ImageView
                android:id="@+id/ivAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/margin_16dp"
                android:src="@drawable/ic_add_image" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/llLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/frameImageContainer">

            <TextView
                style="@style/Urbanist14spSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_of_product" />

            <EditText
                android:id="@+id/etLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:background="@drawable/input_field_background"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImageContainer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llLink">

            <TextView
                style="@style/Urbanist14spSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gift_name" />

            <EditText
                android:id="@+id/etWishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/gift_name_hint"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImageContainer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llWishName">

            <TextView
                style="@style/Urbanist14spSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/price_hint"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImageContainer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llPrice">

            <TextView
                style="@style/Urbanist14spSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/describe_it" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginBottom="@dimen/_90dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:paddingHorizontal="12dp"
                android:paddingTop="@dimen/margin_8dp"
                android:paddingBottom="@dimen/margin_8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameImageContainer" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
