<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="@dimen/margin_14dp"
        android:background="@drawable/input_field_background"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:searchIcon="@drawable/ic_search"
        android:closeIcon="@drawable/ic_close"
        android:queryBackground="@color/transparent"
        android:textColorHint="@color/black_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPeople"
            style="@style/EletChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/people"
            app:chipStrokeColor="@color/sea_blue_2"
            app:chipStrokeWidth="@dimen/margin_1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWish"
            style="@style/EletChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish"
            app:chipStrokeColor="@color/sea_blue_2"
            app:chipStrokeWidth="@dimen/margin_1dp" />
    </com.google.android.material.chip.ChipGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPeople"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWishList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <LinearLayout
        android:id="@+id/llEmptyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_not_found" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/Urbanist14spSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_not_found"
            android:textAlignment="center" />

        <TextView
            style="@style/Urbanist14spRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjust_try"
            android:textAlignment="center" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>